Fix tabs font-size & alignment in chrome

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -173,6 +173,7 @@
     color: @sxt-base-color-dark;
     border-top-color: white;
     border-bottom-color: white;
+    font-size: 11px;
     &.active {
       color: @sxt-base-color;
       background: white;
@@ -194,7 +195,7 @@
 
   }
   .btn {
-    padding: 3px 10px;
+    padding: 3px 10px 2px;
     text-transform: uppercase;
     font-size: 12px;
     font-weight: bold;
